Terraform/Modules_Import/import/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.0"
    }
  }
}

provider "aws" {
  region = "us-east-1"
}

variable "tf-ami" {
  type    = list(string)
  default = ["ami-090fa75af13c156b4", "ami-08d4ac5b634553e16", "ami-06640050dc3f556bb"]
}

variable "tf-tags" {
  type    = list(string)
  default = ["amazon-linux-2", "ubuntu-20.04", "red-hat-linux-8"]
}

resource "aws_instance" "tf-instances" {
  ami             = element(var.tf-ami, count.index)
  instance_type   = "t2.micro"
  count           = 3
  key_name        = "DONT FORGET ME"
  security_groups = ["tf-import-sg"]
  tags = {
    "Name" = element(var.tf-tags, count.index)
  }
}

resource "aws_security_group" "tf-sg" {
  name        = "tf-import-sg"
  description = "Allow TLS inbound traffic"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "tf-import-sg"
  }
}
